<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:aapt="http://schemas.android.com/aapt"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:popupTheme="@style/AppTheme.ActionBar">

    <ProgressBar
        android:id="@+id/progressBarUserInfo"
        android:visibility="gone"
        android:saveEnabled="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="0"
        app:layout_constraintEnd_toEndOf="0"
        app:layout_constraintStart_toStartOf="0"
        app:layout_constraintTop_toBottomOf="@+id/toolbarUserInfo"
        style="?android:attr/progressBarStyle" />

    <androidx.appcompat.widget.Toolbar
        android:theme="?attr/actionBarTheme"
        android:id="@+id/toolbarUserInfo"
        android:background="?attr/colorPrimary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="0"
        app:layout_constraintStart_toStartOf="0"
        app:layout_constraintTop_toTopOf="0"
        app:popupTheme="@style/AppTheme.ActionBar"
        app:title="@string/fragmentUserInfo"
        app:titleTextColor="@color/white" />

    <TextView
        android:textSize="30sp"
        android:textColor="@android:color/black"
        android:id="@+id/textViewUserNameUserInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="0"
        app:layout_constraintStart_toStartOf="0"
        app:layout_constraintTop_toBottomOf="@+id/toolbarUserInfo" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="0"
        app:layout_constraintEnd_toEndOf="0"
        app:layout_constraintStart_toStartOf="0"
        app:layout_constraintTop_toBottomOf="@+id/textViewUserNameUserInfo">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:id="@+id/textViewSettingsOfficeName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="0"
                app:layout_constraintTop_toBottomOf="@+id/imageViewUserInfo" />

            <Button
                android:textColor="@color/white"
                android:id="@+id/buttonSettingsOfficeChange"
                android:background="@color/orange"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/changeOfficeLabel"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="0"
                app:layout_constraintStart_toStartOf="0"
                app:layout_constraintTop_toBottomOf="@+id/textViewSettingsOfficeAddress" />

            <TextView
                android:textSize="24sp"
                android:textColor="@android:color/black"
                android:id="@+id/textViewSettingsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/settingsLabel"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="0"
                app:layout_constraintTop_toBottomOf="@+id/viewBorederUserInfo2" />

            <View
                android:id="@+id/viewBorderUserInfo1"
                android:background="@color/greyButton"
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                app:layout_constraintStart_toStartOf="0"
                app:layout_constraintTop_toTopOf="0" />

            <TextView
                android:textColor="@android:color/black"
                android:id="@+id/textViewSettingsOfficeAddress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="0"
                app:layout_constraintTop_toBottomOf="@+id/textViewSettingsOfficeName" />

            <ImageView
                android:id="@+id/imageViewUserInfo"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_marginTop="16dp"
                android:scaleType="centerCrop"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="0"
                app:layout_constraintStart_toStartOf="0"
                app:layout_constraintTop_toBottomOf="@+id/textViewOfficeLabel" />

            <TextView
                android:textSize="24sp"
                android:textColor="@android:color/black"
                android:id="@+id/textViewOfficeLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/officeLabel"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="0"
                app:layout_constraintStart_toStartOf="0"
                app:layout_constraintTop_toBottomOf="@+id/viewBorderUserInfo1" />

            <View
                android:id="@+id/viewBorederUserInfo2"
                android:background="@color/greyButton"
                android:layout_width="0dp"
                android:layout_height="2dp"
                app:layout_constraintEnd_toEndOf="0"
                app:layout_constraintStart_toStartOf="0"
                app:layout_constraintTop_toBottomOf="@+id/buttonSettingsOfficeChange" />

            <Switch
                android:id="@+id/switchNotification"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/notificationSwitch"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="0"
                app:layout_constraintStart_toStartOf="0"
                app:layout_constraintTop_toBottomOf="@+id/textViewSettingsLabel" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
